[package]
name = "door_trigger"
version = "0.1.0"
authors = ["pi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_gpiozero = "0.2.0"
soloud = { git = "https://github.com/moalyousef/soloud-rs", default-features = false, features = ["alsa"] }
